<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".otheractivities.NoInternet">


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_internet_imageview"
        android:src="@drawable/low_internet"
        android:layout_gravity="center"
       />

    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="@dimen/s_10"
        android:layout_width="wrap_content"
        android:padding="@dimen/s_5"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:id="@+id/no_internet_textview"
        />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/s_16"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/no_internet_try_again"
        android:layout_gravity="center"
        android:id="@+id/no_internet_try_again"
        />


    <android.support.v7.widget.AppCompatButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_button_enable"
        android:layout_margin="@dimen/s_16"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/no_internet_enable_wifi"
      />

    <android.support.v7.widget.AppCompatButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_button_enable_mobile_data"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/no_internet_enable_data"
        android:layout_marginBottom="@dimen/s_54" />
</LinearLayout>
