<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundimage"
    android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/lib/com.traknpay.android"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/instant"
                android:padding="10dp"
                android:layout_marginBottom="16dp"
                />

            <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutCompat2">



                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    >
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">
                        <android.support.design.widget.TextInputLayout
                            android:theme="@style/TextLabel"
                            android:id="@+id/signUpActFirstNameTextLayoutID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/signup_first_name"
                            android:layout_weight="0.5">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/signUpActFirstNameEdittextID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:lines="1"
                                />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:theme="@style/TextLabel"
                            android:id="@+id/signUpActLastNameTextLayoutID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/signup_last_name"
                            android:layout_weight="0.5">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/signUpActLastNameEdittextID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"

                                android:textColor="@color/white"
                                android:lines="1"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.design.widget.TextInputLayout
                        android:theme="@style/TextLabel"
                        android:id="@+id/signUpActEmailTextLayoutID"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:hint="@string/signup_email"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/signUpActEmailEdittextID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textColor="@color/white"
                            android:inputType="textEmailAddress"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:theme="@style/TextLabel"
                        android:id="@+id/signUpActstaticTextLayoutID"
                        android:layout_width="match_parent"
                        android:hint="@string/signup_mobile_no"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/signUpActPhNoEdittextID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="10"
                            android:layout_margin="5dp"
                            android:lines="1"
                            android:textColor="@color/white"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:theme="@style/TextLabel"
                        android:id="@+id/signUpActPwdTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/signup_password"
                        app:passwordToggleTint="@color/colorPrimary"
                        android:layout_margin="5dp"

                        >

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/signUpActpwdEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:textColor="@color/white"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/signUpActPromoEdittextID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:hint="@string/signup_referral_code"
                            android:inputType="text"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/signUpCancleButtonID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/signup_cancel"
                            app:backgroundTint="@color/colorPrimaryDark"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/white"/>

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/signUpActSignUpButtonID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/signup_signup"
                            app:backgroundTint="@color/colorPrimaryDark"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/white"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/signUpActAlreadyAccountID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_margin="5dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_marginEnd="2dp"
                        android:textColor="@color/white"
                        android:id="@+id/member"
                        android:text="@string/signup_already_a_member"/>
                    <android.support.v7.widget.AppCompatTextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#f35b29"
                        android:text="@string/log_in"
                        android:id="@+id/loginmember"/>

                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>