<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:keepScreenOn="true"
    android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/top_frame"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="@dimen/s_16"
            >



            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:hint="@string/search_branch"
                android:lines="1"
                android:id="@+id/pay_to_autoCompleteTextView" />
            <android.support.v7.widget.AppCompatImageView
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:src="@android:drawable/ic_input_get"
                android:id="@+id/pay_to_shop_list_imageview"/>

        </android.support.v7.widget.LinearLayoutCompat>

    <com.example.skilledanswers_d2.wallettransfer.camera.CameraSourcePreview
        android:id="@+id/pay_to_camera_preview"
        android:layout_width="match_parent"
        android:layout_below="@+id/top_frame"
        android:layout_height="wrap_content"
        >

    </com.example.skilledanswers_d2.wallettransfer.camera.CameraSourcePreview>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/round_bg"
        android:text="@string/or"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/s_16"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/pay_to_permission_layout" >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="@dimen/s_16"
            android:text="@string/please_enable_your_camera_permission_to_make_faster_paymet_via_qr_code"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/payto_enable_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_camera"
            app:backgroundTint="@color/colorPrimaryDark"
            android:clickable="true"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="@dimen/s_10"
            android:textColor="@android:color/white"/>
        </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/payto_scan_qr_code_textview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="@dimen/s_16"
        android:gravity="center"
        android:text="Scan QR code to pay"
        android:layout_marginTop="106dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>

