<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent" >

    <ScrollView android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"

        xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/lib/com.traknpay.android"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/instant"/>

            </android.support.v7.widget.LinearLayoutCompat>






            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_activity_emailTextInputLayoutID"
                android:layout_width="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_activity_emailEdittextID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_mobile_no"
                    android:textColor="@color/white"
                    android:maxLength="10"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_activity_pwdTextInputLayoutID"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"

                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_activity_pwdEdittextID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_activity_loginButtonID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"                        android:layout_margin="10dp"
                    android:textColor="@android:color/white"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/login_activity_forgotPwdTextviewButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:textColor="@color/white"
                    android:text="@string/forgot_password"/>
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>